shim/java: V2 substrate java classes + AIDL interface stubs + Westlake engine/services
Lands the Java-side companion to the Binder Pivot V2 substrate (commits
through 2cc754f0): the classpath-shadowed framework classes WestlakeActivity
/ WestlakeApplication / Window / WindowManagerImpl / Resources / LayoutInflater
have grown extensive surface coverage, and a large set of AOSP @hide AIDL
interfaces (IPackageManager, IActivityManager, IPowerManager, IWindowManager,
IServiceConnection, IIntentReceiver, etc.) are stubbed so framework.jar
references resolve at link time.

New trees:
- shim/java/com/westlake/engine/  — V2 substrate (WestlakeContext, Resources,
  Inflater, NavGraph, Renderer, View, Theme, etc.) backing the in-process
  Option-3 path documented in project_noice_inprocess_breakthrough.md.
- shim/java/com/westlake/services/ — service-side stubs (WestlakeActivityManagerService,
  WestlakeWindowManagerService, WestlakePackageManagerService, etc.) for the
  shim-only WestlakeContextImpl.getSystemService route.
- shim/java/android/app/I*.java, shim/java/android/content/I*.java,
  shim/java/android/view/I*.java, shim/java/android/os/I*.java,
  shim/java/android/{hardware/display,service/notification,window}/ — AIDL
  interface stubs.
- shim/java/com/android/internal/{inputmethod,os,policy,view}/ — internal
  Android API stubs needed to satisfy framework.jar at runtime.

Modified V2 substrate hot paths:
- Activity, Application, Window, LayoutInflater, Resources, ApkLoader,
  ActivityManager, MiniActivityManager, MiniServer, PackageManager,
  ResourceTable, ApkResourceLoader, Binder, ServiceManager,
  ServiceManagerNative, Fragment, FragmentManager, FragmentTransactionImpl,
  ContentResolver, Toast, ViewGroup, Log — incremental fixes accumulated
  through CR55-CR62 that did not get committed in their respective threads.

Deleted: shim/java/android/content/pm/ManifestParser{,$ManifestInfo}.class
(stray .class build outputs that should never have been tracked).

Co-Au